courses/430_programming-languages/assignment-8/tests/error/error34.nex
{
yesle (verna) {raspetchatat 3;} yesho {raspetchatat 1;} yesho {raspetchatat 3;}
}
